# ArithmeticCompressor

./: README.md  results.csv
src/: CMakeLists.txt  ari.cpp  ari.h  main.cpp  ppm.cpp  utils.cpp  utils.h
tests/: run.py
tests/testing/: compressor.py
